# halionbridge

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  DEVELOPMENT.md  HALION-LUA.md  README.md
.github/workflows/: build.yml
cli/: Main.cpp
cmake/: BuildInfo.cpp.in  expect_cli.cmake  generate_build_info.cmake  halionbridge_version.cmake
cmake/sfizz-overrides/: CheckIPO.cmake  SfizzConfig.cmake
converters/: CMakeLists.txt  ConverterRegistrations.cpp.in
converters/common/include/halionbridge_converters/: BuildDirectoryEmitter.h  Converter.h
converters/common/src/: BuildDirectoryEmitter.cpp  Converter.cpp
converters/sfz/include/halionbridge_converters/sfz/: SfzConverter.h
converters/sfz/lua/: halionbridge-sfz.lua
converters/sfz/src/: SfzConverter.cpp  SfzHelperLua.h.in
examples/synth-single-cycle/: 001_synth_single_cycle_velocity_layers.lua  halionbridge_build.lua
examples/synth-single-cycle-sfz/: 001_synth-single-cycle-three-regions-three-velocity_layers.sfz
examples/synth-single-cycle-uninitialized/: 000_synth_single_cycle_six_regions.lua  001_synth_single_cycle_velocity_layers.lua
halion-lua/: builder.lua  builder_bootstrap.lua  builder_bootstrap.vstpreset  preset_remap.lua
include/halionbridge/: Bridge.h  BuildInfo.h  CrashDiagnostics.h
packaging/macos/: halionbridge.entitlements
probes/sfz/020-helper-rewrite-regression/: README.md
probes/sfz/020-helper-rewrite-regression/halionbridge-build/: 000_probe.lua  halionbridge_build.lua  probe.vstpreset
probes/sfz/020-helper-rewrite-regression/source/: probe.sfz
probes/sfz/021-loop-end-sample-end-diagnostic/: README.md
probes/sfz/021-loop-end-sample-end-diagnostic/halionbridge-build/: 000_loop_end_199.lua  001_loop_end_200.lua  002_sample_end_200_loop_end_200.lua  halionbridge-sfz.lua  halionbridge_build.lua  probe_loop_end_199.vstpreset  probe_loop_end_200.vstpreset  probe_sample_end_200_loop_end_200.vstpreset
probes/sfz/022-synth-single-cycle-regression/: README.md
probes/sfz/022-synth-single-cycle-regression/halionbridge-build/: 000_000_synth_single_cycle_six_regions.lua  000_synth_single_cycle_six_regions.vstpreset  001_001_synth_single_cycle_three_regions_three_velocity_layers.lua  001_synth_single_cycle_three_regions_three_velocity_layers.vstpreset  halionbridge_build.lua
probes/sfz/022-synth-single-cycle-regression/source/: 000_synth-single-cycle-six-regions.sfz
probes/sfz/023-velocity-boundary-diagnostic/: README.md
probes/sfz/023-velocity-boundary-diagnostic/halionbridge-build/: 000_001_synth_single_cycle_three_regions_three_velocity_layers.lua  001_synth_single_cycle_three_regions_three_velocity_layers.vstpreset  halionbridge_build.lua
probes/sfz/023-velocity-boundary-diagnostic/plugnscript/: halionbridge_sfz_velocity_boundary_generator.cxx
probes/sfz/024-static-pitch-tuning-diagnostic/: README.md
probes/sfz/024-static-pitch-tuning-diagnostic/source/: 003_tune_minus_50.sfz  (+2 more)
probes/sfz/025-static-pitch-tuning-implementation-regression/: README.md
probes/sfz/026-static-pitch-keytrack-centerkey-regression/: README.md
probes/sfz/027-gain-pan-basics-diagnostic/: README.md
probes/sfz/028-amp-velocity-calibration-diagnostic/: README.md
probes/sfz/029-amp-velocity-curve-sweep-diagnostic/: README.md
probes/sfz/030-main-velocity-curve-sweep-diagnostic/: README.md
probes/sfz/031-level-headroom-panlaw-diagnostic/: README.md
probes/sfz/032-gain-velocity-implementation-regression/: README.md
probes/sfz/033-pan-basics-diagnostic/: README.md
probes/sfz/034-pan-implementation-regression/: README.md
probes/sfz/035-sample-playback-range-diagnostic/: README.md
probes/sfz/036-sample-playback-range-end-initialized/: README.md
probes/sfz/037-sample-end-boundary-impulse/: README.md
probes/sfz/038-sample-playback-range-implementation-regression/: README.md
probes/sfz/039-loop-variants-diagnostic/: README.md
probes/sfz/040-loop-variants-clean-long-diagnostic/: README.md
probes/sfz/041-loop-playback-mode-marker-diagnostic/: README.md
probes/sfz/042-loop-mode-implementation-regression/: README.md
probes/sfz/043-amplitude-envelope-diagnostic/: README.md
probes/sfz/044-amplitude-release-curve-diagnostic/: README.md
probes/sfz/045-amplitude-release-negative-curve-diagnostic/: README.md
probes/sfz/046-amplitude-release-duration-scale-diagnostic/: README.md
probes/sfz/047-amplitude-release-two-segment-diagnostic/: README.md
probes/sfz/048-amplitude-release-two-segment-implementation-regression/: README.md
probes/sfz/049-amplitude-envelope-post-release-regression/: README.md
probes/sfz/050-amplitude-decay-shape-diagnostic/: README.md
probes/sfz/051-amplitude-decay-implementation-regression/: README.md
probes/sfz/052-amplitude-start-diagnostic/: README.md
probes/sfz/053-amplitude-start-implementation-regression/: README.md
probes/sfz/054-filter-basics-diagnostic/: README.md
probes/sfz/055-filter-static-long-diagnostic/: README.md
probes/sfz/056-filter-cutoff-resonance-calibration/: README.md
probes/sfz/057-filter-lpf2-calibrated-validation/: README.md
probes/sfz/058-filter-lpf2-implementation-regression/: README.md
probes/sfz/059-filter-family-rough-mapping/: README.md
probes/sfz/060-filter-family-implementation-regression/: README.md
probes/sfz/061-pitch-filter-envelope-diagnostic/: README.md
probes/sfz/062-pitch-envelope-decay-start-diagnostic/: README.md
probes/sfz/063-pitch-envelope-decay-curve-diagnostic/: README.md
probes/sfz/064-pitch-envelope-implementation-regression/: README.md
src/: Bridge.cpp  BuildFile.cpp  BuildFile.h  BuildWorker.cpp  BuildWorker.h  ChildProcessOutput.cpp  ChildProcessOutput.h  CliCommand.cpp  CliCommand.h  CrashDiagnostics.cpp  Log.cpp  Log.h  PathUtils.cpp  PathUtils.h  PluginScan.cpp  PluginScan.h  PresetRemap.cpp  PresetRemap.h  ProgressMarkers.cpp  ProgressMarkers.h  VstPresetMetadata.cpp  VstPresetMetadata.h
tests/: PublicHeaderSmoke.cpp  Tests.cpp
vstpreset-metadata/: README.md  merge-preset-csv.py  preset-metadata-template.csv  preset-metadata-template.ods
(+981 files in other folders)
